<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="map_view">Map View</string>
    <string name="restaurant_view">List View</string>
    <string name="workmates_view">Workmates</string>

    <string name="permissions_denied">This app needs location permissions to work properly</string>
    <string name="login_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="facebook_application_id" translatable="false">335868633806974</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb335868633806974</string>

    <string name="twitter_consumer_key" translatable="false">veninQx7CAQiRVlwOWEUZevO6</string>
    <string name="twitter_consumer_secret" translatable="false">KTqriGKbHFObPlreoNRnC3CSL4orILysCwdL5pbH4z4buxatfl</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="hasn_t_decided_yet">User didnt decide yet.</string>
    <string name="msg_token_fmt">Token retrieved and sent to server! You can now use gcmsender to     send downstream messages to this app</string>
    <string name="hint">Search for restaurants</string>
</resources>
